# Work_2024

./: .gitignore  README.md
ESP32/lib/encoder/: encoder.c  encoder.h
ESP32/lib/h_bridge/: h_bridge.c  h_bridge.h
ESP32/lib/i2c_slave/: i2c_slave.c  i2c_slave.h
ESP32/lib/pid/: pid.c  pid.h
ESP32/lib/utils/: utils.c  utils.h
ESP32/src/: main.c
ESP32_slave1/: CMakeLists.txt
ESP32_slave1/include/: definitions.py
ESP32_slave1/lib/encoder/: encoder.h
ESP32_slave1/lib/h_bridge/: h_bridge.c  h_bridge.h
ESP32_slave1/lib/i2c_slave/: i2c_slave.c  i2c_slave.h
ESP32_slave1/lib/pid/: pid.c  pid.h
ESP32_slave1/lib/utils/: utils.c  utils.h
ESP32_slave1/src/: main.c
ESP32_slave2/: CMakeLists.txt
ESP32_slave2/include/: pid_semear.py
ESP32_slave2/lib/h_bridge/: h_bridge.h
ESP32_slave2/lib/i2c_slave/: i2c_slave.c  i2c_slave.h
ESP32_slave2/lib/pid/: pid.c  pid.h
ESP32_slave2/src/: main.c
RPi/: i2c_master.py
RPi/catkin_ws/: frames.gv
RPi/catkin_ws/src/robot_actions/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_actions/action/: MoveToShelf.action
RPi/catkin_ws/src/robot_arm_control/: .setup_assistant  CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_arm_control/config/: fake_controllers.yaml  gazebo_robot_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot_description.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
RPi/catkin_ws/src/robot_arm_control/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
RPi/catkin_ws/src/robot_arm_control/plugin/: auto_grab_plugin.cpp
RPi/catkin_ws/src/robot_arm_control/scripts/: arm_control.py  gripper.py
RPi/catkin_ws/src/robot_arm_control/world/: task1.world  teste.world
RPi/catkin_ws/src/robot_base_control/: CMakeLists.txt
RPi/catkin_ws/src/robot_base_control/include/: hw_interface.hpp
RPi/catkin_ws/src/robot_base_control/scripts/: align_block.py  i2c_master.py  teste.py
RPi/catkin_ws/src/robot_base_control/src/: hw_interface.cpp
RPi/catkin_ws/src/robot_block_finder/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_block_finder/scripts/: align_block.py
RPi/catkin_ws/src/robot_block_finder/srv/: SearchBlock.srv
RPi/catkin_ws/src/robot_control/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_control/config/: wheel_control.yaml
RPi/catkin_ws/src/robot_control/include/: hw_interface.hpp
RPi/catkin_ws/src/robot_control/launch/: hw_interface.launch
RPi/catkin_ws/src/robot_control/msg/: encoder_data.msg
RPi/catkin_ws/src/robot_control/scripts/: aruco_identification.py  controle_garra.py  i2c_master.py  teste_camera.py
RPi/catkin_ws/src/robot_control/src/: hw_interface.cpp
RPi/catkin_ws/src/robot_description/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_description/config/: joint_names_robot_description.yaml  robot_config.yaml  rviz.rviz
RPi/catkin_ws/src/robot_description/launch/: display.launch  gazebo.launch  teste.launch
RPi/catkin_ws/src/robot_description/meshes/: base_link.STL  garra1_link.STL  garra2_link.STL  manip_link.STL
RPi/catkin_ws/src/robot_description/src/: robot_drive_plugin.cc
RPi/catkin_ws/src/robot_description/urdf/: robot_description.csv  robot_description.urdf
RPi/catkin_ws/src/robot_description/worlds/: map_teste.world
RPi/catkin_ws/src/robot_scheduler/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_scheduler/launch/: scheduler.launch
RPi/catkin_ws/src/robot_scheduler/src/: robot_scheduler.py
RPi/catkin_ws/src/robot_simulation/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_simulation/launch/: pick_and_place.launch  pick_and_place_simulation.launch
RPi/catkin_ws/src/robot_tasks/: package.xml
RPi/catkin_ws/src/robot_tasks/launch/: task_test.launch
RPi/catkin_ws/src/robot_tests/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/robot_tests/src/: countdown_server.py
RPi/catkin_ws/src/work_description/: CMakeLists.txt  package.xml
RPi/catkin_ws/src/work_description/config/: joint_names_work_description.yaml
RPi/catkin_ws/src/work_description/launch/: display.launch  gazebo.launch
RPi/catkin_ws/src/work_description/urdf/: work_description.csv  work_description.urdf
jetson/catkin_ws/: .gitignore
jetson/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
jetson/catkin_ws/src/robot_arm_control/: CMakeLists.txt
jetson/catkin_ws/src/robot_arm_control/config/: arm_poses.yaml
jetson/catkin_ws/src/robot_arm_control/launch/: arm_control.launch
jetson/catkin_ws/src/robot_arm_control/msg/: DualServoCommand.msg  MoveToPoseCommand.msg
jetson/catkin_ws/src/robot_arm_control/scripts/: arm_teleop.py  pose_transition_node.py
jetson/catkin_ws/src/robot_arm_control/src/: arm_hw_interface.py
jetson/catkin_ws/src/robot_base_control/: CMakeLists.txt  package.xml
jetson/catkin_ws/src/robot_base_control/launch/: hw_interface.launch
jetson/catkin_ws/src/robot_base_control/scripts/: align_table.py  border_detect.py  i2c_master.py  move_time.py  search_block.py
jetson/catkin_ws/src/robot_base_control/src/: hw_interface.cpp
jetson/catkin_ws/src/robot_block_finder/: CMakeLists.txt
jetson/catkin_ws/src/robot_block_finder/scripts/: align_block.py  example_subscribe_color.py  new_select_colort.py  select_color_task1.py
jetson/catkin_ws/src/robot_line_follower/: CMakeLists.txt
jetson/catkin_ws/src/robot_line_follower/launch/: line_follower.launch
jetson/catkin_ws/src/robot_scheduler/: CMakeLists.txt  package.xml
jetson/catkin_ws/src/robot_scheduler/scripts/: scheduler_basic_task1.py  scheduler_basic_test1.py
jetson/catkin_ws/src/robot_tasks/: CMakeLists.txt
jetson/catkin_ws/src/robot_utils/: CMakeLists.txt  package.xml
(+24 files in other folders)
